Added Error Page Handler 404 and 500.

--- a/src/templates/base_template/base.html
+++ b/src/templates/base_template/base.html
@@ -159,6 +159,7 @@
       <!-- Footer -->
 
       <!-- Footer -->
+      <div class="row">
           <footer class="page-footer font-small fixed-bottom" style="background-color: black">
 
           <!-- Copyright -->
@@ -169,6 +170,7 @@
           <!-- Copyright -->
 
           </footer>
+      </div>
           <!-- Footer -->
         <!-- Footer -->
     </main>
