--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -1,11 +1,13 @@
-{% extends 'base_template/base.html' %}
+{% extends "error/base.html" %}
+{% load i18n %}
 
+{% block title %}
+404
+{% endblock %}
 {% block content %}
 <div class="page-error tile">
   <h1><i class="fa fa-exclamation-circle"></i> Error 404: Page not found</h1>
   <p>The page you have requested is not found.</p>
   <p><a class="btn btn-primary" href="javascript:window.history.back();">Go Back</a></p>
 </div>
-<script src="{% static 'base_static/js/plugins/pace.min.js' %}"></script>
-
 {% endblock %}
